plugins {
    id 'java-library'
    id 'antlr'
    id 'idea'
}

repositories {
    mavenCentral()
}

dependencies {
    antlr 'org.antlr:antlr4:4.10.1'
    testImplementation 'junit:junit:4.13.2'
}

tasks.withType(JavaCompile) {
    options.release = 17
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java', 'build/generated-src/antlr/main']
        }
    }

    test {
        java {
            srcDirs = ['src/test/java', 'build/generated-src/antlr/main']
        }
    }
}

idea {
    module {
        sourceDirs += file('build/generated-src/antlr/main')
    }
}

generateGrammarSource {
    outputDirectory = new File("${project.buildDir}/generated-src/antlr/main/io/github/dayal96/antlr")
    maxHeapSize = "128m"
    arguments += ['-package', 'io.github.dayal96.antlr', '-visitor', '-no-listener']
}

compileJava.source sourceSets.main.java

test {
    useJUnit()
    maxHeapSize = '1G'
    testLogging {
        events "passed", "skipped", "failed"
    }
}



